# Housing-Price-Prediction-System

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
artifacts/: data.csv  model.pkl  preprocessor.pkl  test.csv  train.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
research/: EDA_Houses_Prices.ipynb  Model_Training.ipynb
research/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
research/catboost_info/learn/: events.out.tfevents
research/data/processed_data/: Y.csv
src/: utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
static/: style.css
templates/: home.html
