[project]
name = "housing-price-prediction-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "xgboost>=3.1.3",
]
